--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
             50% { opacity: 1; transform: scaleY(1); }
             100% { opacity: 0; transform: scaleY(1); }
         }
-        }
+        
 
         .shockwave {
             position: absolute;
@@ -1506,13 +1506,18 @@
             }
 
             fillBoard() {
-                for (let col = 0; col < this.cols; col++) {
-                    for (let row = 0; row < this.rows; row++) {
-                        if (this.board[row][col] === null) {
-                            this.board[row][col] = this.colors[Math.floor(Math.random() * this.colors.length)];
-                        }
+            for (let col = 0; col < this.cols; col++) {
+                for (let row = 0; row < this.rows; row++) {
+                if (this.board[row][col] === null) {
+                    const gemType = this.generateRandomGemWithSpecial();
+                    this.board[row][col] = gemType;
+
+                    if (this.specialGems.includes(gemType)) {
+                    this.showSpecialGemText(gemType, row, col);
                     }
                 }
+                }
+            }
             }
 
             updateScore() {
